add hydrogen result

--- a/notebooks/run_gptqe_lih_once.ipynb
+++ b/notebooks/run_gptqe_lih_once.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A demo using two-qubit HeisenbergModel Hamiltonian with GPT-QE (using minGPT code)."
+    "## A demo using Hydrogen Hamiltonian with GPT-QE."
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -103,30 +103,28 @@
       "Term, coeff:  ((1, 'Z'), (3, 'Z')) 0.17434844185575682\n",
       "Index, p_char:  1 Z\n",
       "Index, p_char:  3 Z\n",
-      "paulis [+ZYZI, +YZXI, +XIYI, +YIXI, +YZXZ, +ZYZZ, +XZYZ, +XZYI, +YYYI, +XIII, +XYXI, +IIII]\n"
+      "paulis [+XIII, +XIYI, +XYXI, +XZYI, +XZYZ, +YIXI, +YYYI, +YZXI, +YZXZ, +ZYZI, +ZYZZ, +IIII]\n"
      ]
     }
    ],
    "source": [
-    "from qwrapper.hamiltonian import HeisenbergModel\n",
     "from qwrapper.operator import PauliObservable\n",
     "from gqe.mingpt.cost import EnergyCost\n",
-    "from qswift.initializer import ZBasisInitializer\n",
     "from qswift.compiler import DefaultOperatorPool\n",
     "from benchmark.molecule import DiatomicMolecularHamiltonian\n",
     "from gqe.operator_pool.uccsd import UCCSD, generate_molecule\n",
     "from gqe.common.initializer import HFStateInitializer\n",
     "\n",
-    "molecule = generate_molecule(\"H\", \"H\", 0.7414, \"sto-3g\")\n",
-    "nqubit = 4\n",
+    "molecule = generate_molecule(\"Li\", \"H\", 1.596, \"sto-3g\", bravyi_kitaev=False)\n",
+    "nqubit = 10\n",
     "\n",
     "# prepare Hamiltonian\n",
-    "hamiltonian = DiatomicMolecularHamiltonian(nqubit, molecule)\n",
+    "hamiltonian = DiatomicMolecularHamiltonian(nqubit, molecule, bravyi_kitaev=False)\n",
     "\n",
     "# prepare operator_pool\n",
-    "uccsd = UCCSD(4, molecule)\n",
+    "uccsd = UCCSD(nqubit, molecule)\n",
     "paulis = uccsd.paulis\n",
-    "paulis.append(PauliObservable(\"IIII\"))\n",
+    "paulis.append(PauliObservable(\"IIIIIIIIII\"))\n",
     "print('paulis', paulis)\n",
     "num_operators = len(paulis)\n",
     "initializer = HFStateInitializer(n_electrons=2)\n",
@@ -137,8 +135,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-14T22:25:49.476073Z",
-     "start_time": "2023-09-14T22:25:46.758546Z"
+     "end_time": "2023-09-15T18:28:47.381550Z",
+     "start_time": "2023-09-15T18:28:42.957835Z"
     }
    }
   },
@@ -9776,7 +9774,8 @@
    "source": [
     "def batch_end_callback(trainer):\n",
     "    if trainer.iter_num % 1 == 0:\n",
-    "        print(f\"iter_dt {trainer.iter_dt * 1000:.2f}ms; iter {trainer.iter_num}: train loss {trainer.loss.item():.5f} temperature: {model.temperature}\")\n",
+    "        print(\n",
+    "            f\"iter_dt {trainer.iter_dt * 1000:.2f}ms; iter {trainer.iter_num}: train loss {trainer.loss.item():.5f} temperature: {model.temperature}\")\n",
     "        model.temperature += 0.01\n",
     "\n",
     "\n",
@@ -9862,15 +9861,6 @@
      "end_time": "2023-09-15T00:58:50.152801Z",
      "start_time": "2023-09-15T00:58:48.020391Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
