complete lih experiment

--- a/notebooks/run_gptqe_hydrogen.ipynb
+++ b/notebooks/run_gptqe_hydrogen.ipynb
@@ -108,11 +108,14 @@
     "\n",
     "    trainer = Trainer(train_config, model)\n",
     "\n",
-    "    def batch_end_callback(trainer):\n",
+    "    def batch_end_callback(trainer, detail):\n",
     "        if trainer.iter_num % 1 == 0:\n",
     "            print(\n",
     "                f\"iter_dt {trainer.iter_dt * 1000:.2f}ms; iter {trainer.iter_num}: train loss {trainer.loss.item():.5f} temperature: {model.temperature}\")\n",
     "            model.temperature += 0.05\n",
+    "            print(\"mean_logits\", torch.mean(detail.logits, 1) * model.energy_scaling)\n",
+    "            print(\"energies:\", detail.energies)\n",
+    "            print(\"mean:\", torch.mean(detail.energies))\n",
     "\n",
     "    trainer.set_callback('on_batch_end', batch_end_callback)\n",
     "    trainer.run()\n",
