--- a/playground.ipynb
+++ b/playground.ipynb
@@ -4,25 +4,139 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-10-02T20:15:44.272156Z",
+     "start_time": "2023-10-02T20:15:40.262791Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converged SCF energy = -15.0242100060364\n"
+      "-14.629609107971191\n",
+      "-14.764800071716309\n",
+      "-14.80013656616211\n",
+      "-14.9441556930542\n",
+      "-14.997356414794922\n",
+      "-14.945995330810547\n",
+      "-14.747645378112793\n",
+      "-14.924903869628906\n",
+      "-14.859827995300293\n",
+      "-15.017534255981445\n",
+      "-14.753560066223145\n",
+      "-14.872464179992676\n",
+      "-14.800297737121582\n",
+      "-14.761377334594727\n",
+      "-14.809714317321777\n",
+      "-14.940330505371094\n",
+      "-14.855204582214355\n",
+      "-15.0630521774292\n",
+      "-14.918434143066406\n",
+      "-14.556087493896484\n",
+      "-14.896303176879883\n",
+      "-14.962114334106445\n",
+      "-14.722224235534668\n",
+      "-14.933088302612305\n",
+      "-14.733600616455078\n",
+      "-14.830150604248047\n",
+      "-14.81461238861084\n",
+      "-14.784114837646484\n",
+      "-14.560359001159668\n",
+      "-14.816987991333008\n",
+      "-14.751043319702148\n",
+      "-14.935372352600098\n",
+      "-14.74219036102295\n",
+      "-14.422943115234375\n",
+      "-14.779778480529785\n",
+      "-14.898237228393555\n",
+      "-14.75837230682373\n",
+      "-14.788436889648438\n",
+      "-14.812824249267578\n",
+      "-14.906524658203125\n",
+      "-14.935636520385742\n",
+      "-14.930317878723145\n",
+      "-14.620155334472656\n",
+      "-14.85356616973877\n",
+      "-14.426077842712402\n",
+      "-14.69405746459961\n",
+      "-14.907896995544434\n",
+      "-14.942290306091309\n",
+      "-14.822061538696289\n",
+      "-14.552953720092773\n",
+      "-14.84002685546875\n",
+      "-14.549123764038086\n",
+      "-14.94213581085205\n",
+      "-14.823803901672363\n",
+      "-14.764754295349121\n",
+      "-15.021801948547363\n",
+      "-14.962481498718262\n",
+      "-14.887249946594238\n",
+      "-14.951383590698242\n",
+      "-14.77328109741211\n",
+      "-14.866671562194824\n",
+      "-14.947427749633789\n",
+      "-15.015219688415527\n",
+      "-14.856110572814941\n",
+      "torch.Size([64, 30])\n",
+      "torch.Size([64])\n",
+      "tensor([[ 248,    5,  809,  ...,  511,  724, 1011],\n",
+      "        [ 946,  606,  438,  ..., 1011,  358,  256],\n",
+      "        [ 532,  440,  953,  ...,  547,  641,  440],\n",
+      "        ...,\n",
+      "        [ 985,  358,  396,  ...,  874, 1034,  362],\n",
+      "        [ 885,    4,  257,  ...,  610,  185,  337],\n",
+      "        [ 534,  421,  448,  ..., 1011,  354,  337]], dtype=torch.int32)\n",
+      "tensor([-14.6296, -14.7648, -14.8001, -14.9442, -14.9974, -14.9460, -14.7476,\n",
+      "        -14.9249, -14.8598, -15.0175, -14.7536, -14.8725, -14.8003, -14.7614,\n",
+      "        -14.8097, -14.9403, -14.8552, -15.0631, -14.9184, -14.5561, -14.8963,\n",
+      "        -14.9621, -14.7222, -14.9331, -14.7336, -14.8302, -14.8146, -14.7841,\n",
+      "        -14.5604, -14.8170, -14.7510, -14.9354, -14.7422, -14.4229, -14.7798,\n",
+      "        -14.8982, -14.7584, -14.7884, -14.8128, -14.9065, -14.9356, -14.9303,\n",
+      "        -14.6202, -14.8536, -14.4261, -14.6941, -14.9079, -14.9423, -14.8221,\n",
+      "        -14.5530, -14.8400, -14.5491, -14.9421, -14.8238, -14.7648, -15.0218,\n",
+      "        -14.9625, -14.8872, -14.9514, -14.7733, -14.8667, -14.9474, -15.0152,\n",
+      "        -14.8561])\n"
      ]
     }
    ],
    "source": [
-    "from gqe.operator_pool.uccsd import UCCSD, do_generate_molecule\n",
+    "from gqe.mingpt.data import EnergyDataset\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
-    "bond_length = 3.0\n",
-    "geometry = f\"H 0.0 0.0 0.0\\n\" + f\"Be 0.0 0.0 {bond_length}\\n\" + f\"H 0.0 0.0 {2 * bond_length}\\n\"\n",
-    "molecule = do_generate_molecule(geometry, \"sto-3g\", bravyi_kitaev=False)\n",
-    "uccsd = UCCSD(12, molecule)"
+    "loader = DataLoader(EnergyDataset([\n",
+    "    'output/trajectory_beh2_31.json',\n",
+    "    'output/trajectory_beh2_37.json',\n",
+    "    'output/trajectory_beh2_43.json',\n",
+    "    'output/trajectory_beh2_47.json',\n",
+    "    'output/trajectory_beh2_53.json'\n",
+    "]), batch_size=64, shuffle=False)\n",
+    "\n",
+    "count = 0\n",
+    "features, energies = next(iter(loader))\n",
+    "print(features.size())\n",
+    "print(energies.size())\n",
+    "print(features)\n",
+    "print(energies)\n",
+    "# for features, energies in loader:\n",
+    "#     print(f\"-----{count}-----\")\n",
+    "#     print(features, energies)\n",
+    "#     count += 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-02T20:12:58.968690Z",
+     "start_time": "2023-10-02T20:12:58.966965Z"
+    }
+   }
   }
  ],
  "metadata": {
