fix vqe package

--- a/notebooks/run_gptqe_beh2_once.ipynb
+++ b/notebooks/run_gptqe_beh2_once.ipynb
@@ -27,6 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-02T00:45:09.117775Z",
+     "start_time": "2023-10-02T00:45:05.033318Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -148,7 +155,7 @@
     "from benchmark.molecule import DiatomicMolecularHamiltonian\n",
     "from gqe.operator_pool.uccsd import UCCSD, do_generate_molecule\n",
     "from gqe.common.initializer import HFStateInitializer\n",
-    "from gqe.util import get_device\n",
+    "from gqe.common.util import get_device\n",
     "from gqe.mingpt.callback import DefaultCallback, PrintMonitor, FileMonitor\n",
     "\n",
     "# molecule = generate_molecule(\"Li\", \"H\", 1.596, \"sto-3g\", bravyi_kitaev=False)\n",
@@ -170,27 +177,27 @@
     "pool = DefaultOperatorPool(paulis)\n",
     "cost = EnergyCost(hamiltonian, initializer, pool,\n",
     "                  [1/160, -1/160, 1/80, -1/80, 1/40, -1/40, 0.05, -0.05, 0.1, -0.1, 0.2, -0.2])\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-02T00:45:09.117775Z",
-     "start_time": "2023-10-02T00:45:05.033318Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## FCI energy by diagonalization"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## FCI energy by diagonalization"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-02T00:47:20.729015Z",
+     "start_time": "2023-10-02T00:45:09.119342Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -204,18 +211,18 @@
     "from qwrapper.hamiltonian import compute_ground_state\n",
     "\n",
     "print(compute_ground_state(hamiltonian))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-02T00:47:20.729015Z",
-     "start_time": "2023-10-02T00:45:09.119342Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-02T00:47:20.738947Z",
+     "start_time": "2023-10-02T00:47:20.736013Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -227,23 +234,16 @@
    ],
    "source": [
     "print(\"hf state:\", hamiltonian.exact_value(initializer.init_circuit(12, [], \"qulacs\")))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-02T00:47:20.738947Z",
-     "start_time": "2023-10-02T00:47:20.736013Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Setup for GPT"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Setup for GPT"
+   ]
   },
   {
    "cell_type": "code",
@@ -313,10 +313,10 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
@@ -583,26 +583,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(file_monitor.min_energy)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "cost.sequence.tool = \"qiskit\"\n",
     "print(file_monitor.min_indices)\n",
     "cost.sequence._get_circuit(file_monitor.min_indices).qc.draw(output=\"mpl\", plot_barriers=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
